# GravidAI

./: .gitignore  README.md
api/: main.py  pyproject.toml  requirements.txt
api/db/: database.py
api/model/: embedding.py  request.py  response.py
api/service/: answer_service.py  embedding_service.py
api/utils/: format.py  observability.py
gravidai/: package-lock.json  package.json
gravidai/public/: index.html
gravidai/src/: App.css  App.tsx
