[tool.poetry]
name = "gravidai"
version = "0.1.0"
description = "Assistant for pregnant person"
authors = ["Victor Resende <victoresende19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pymongo = "^4.10.1"
langchain = "^0.3.7"
openai = "^1.55.0"
langsmith = "^0.1.144"
python-dotenv = "^1.0.1"
pypdf2 = "^3.0.1"
tiktoken = "^0.8.0"
langchain-community = "^0.3.7"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
